--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>gustavo</title>
 </head>
 <body>
   <img src="img/avatar-perfil.png" alt="avatar do gustavo">
-  <p>euou gustavo</p>
+  <p>eu sou gustavo</p>
   <h1>Eu ensino a dar grau</h1>
-<P>Eu sou o gustavo e eu gosto de dar grau de bike</P>
+<P>Eu sou o Gustavo e eu gosto de dar grau de bike</P>
 <p>minhas habilidades</p>
 <div>
-    <p>raspo a mao no chao </p>
-    <p>suicida</p>
-    <p>gringo </p>
-    
+    <p>Raspo a mao no chao </p>
+    <p>Suicida</p>
+    <p>Gringo </p>
+
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
